<resources>
    <string name="app_name">WifWaf</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome on board!</string>

    <!-- Activity sign up et main activity (connection activity)-->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="birthday">Date of birth</string>
    <string name="phone">Phone number</string>
    <string name="description">Description</string>
    <string name="title_activity_result_sign_up">ResultSignUp</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_connect">connection</string>

    <!-- Activity add dog -->
    <string name="title_activity_add_dog">Add Dog</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="size">Size</string>
    <string name="button_add_dog">Add Dog</string>
    <string name="getAlongWithMales">Does your dog get along with male dogs?</string>
    <string name="getAlongWithFemales">Does your dog get along with female dogs?</string>
    <string name="getAlongWithKids">Does your dog get along with children?</string>
    <string name="getAlongWithHumans">Does your dog get along with humans in general?</string>
    <string name="gender">Gender</string>

    <!-- Strings communes à plusieurs forms -->
    <string name="confirm">confirm</string>

    <!-- Menu -->
    <string name="title_activity_user_profile">My Profile</string>
    <string name="title_activity_user_dogs">My Dogs</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_walk_profile">Walk\'s profile</string>
    <string name="title_activity_user_walks">My walks</string>
    <string name="title_activity_dog_profile">Dog\'s profile</string>
    <string name="title_activity_add_walk">Add a walk</string>
    <string name="action_profile">Profile</string>
    <string name="action_home">Home</string>
    <string name="action_dogs">Dogs</string>
    <string name="connect">Connection</string>
    <string name="button_sign_in">Sign In</string>

    <!-- Jimmy add -->
    <string name="user_dogs_prompt">Choose your dogs</string>
    <string name="new_walk">New Walk</string>
    <string name="title">Title</string>
    <string name="contact_creator">Contact creator</string>
    <string name="userProfile">User Profile</string>
    <string name="seeProfile">See user profile</string>
    <string name="save">Save</string>

    <string-array name="user_dogs_arrays">
        <item>No dogs</item>
    </string-array>
    <string name="title_activity_public_user_profile">User Profile</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_public_walk_profile">Walk</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="city">City</string>
    <string name="useWalk">Use this path</string>
    <string name="userDogs">User Dogs</string>
    <string name="walkDogs">View the dogs participating to this walk</string>
    <string name="viewPath">View Path</string>
    <string name="departure">Departure</string>
    <string name="timeStamp">At what time?</string>
    <string name="date">Which day?</string>
    <string name="date_WA">Date</string>
    <string name="TraceByWalking">Trace by walking</string>
    <string name="TraceByDrawing">Trace by drawing</string>
    <string name="promptGender">Gender</string>
    <string name="selectDog">Select dogs</string>
    <string name="time">Time</string>
    <string name="title_activity_gps_walk">Walk Path</string>


    <string name="cancel">Cancel</string>
    <string name="title_prompt_select_dogs">Select the dogs participating to this walk</string>
    <string name="no_dogs_selected">No dogs selected</string>
    <string name="selected_dogs">Dogs selected :</string>
    <string name="select_date">Select date</string>
    <string name="select_birthdate">Select birthdate</string>
    <string name="modify_date">Modify date</string>
    <string name="like_to_come">I\'d like to come!</string>
    <string name="modify_time">Modify time</string>
    <string name="behaviour">Behaviour</string>
    <string name="error_email_already_exists">This e-mail address is already used</string>
    <string name="not_enough_dogs">Please select at least one dog</string>
    <string name="oups">Oups...</string>
    <string name="no_dogs_for_now">You have no dogs for the moment! Please add a dog to WifWaf before adding a walk.</string>
    <string name="no_dog_for_now_participation">You have no dogs for the moment! Please add a dog to WifWaf before asking to participate to a walk.</string>
    <string name="bad_id_pass">Incorrect ID/Password</string>
    <string name="error">Error</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dogsWalk">Dogs participating to this walk</string>
    <string name="take_picture">Take a picture</string>
    <string name="starting_point">Starting point</string>
    <string name="add_point">Please add points to create your walk</string>
    <string name="end">End</string>
    <string name="my_position">My position</string>
    <string name="first_instruction_draw">Please select where your walk should start</string>
    <string name="change_picture">Change picture</string>
    <string name="select_picture_from_explorer">Select picture from explorer</string>
    <string name="change_picture_take">Take a new picture</string>
    <string name="change_picture_gallery">Select a picture from the gallery</string>
    <string name="select_birthday">Select birth date</string>
    <string name="who_s_participating">View participants</string>
    <string name="participants">Participants</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userName">Username</string>
    <string name="dogName">Dog name</string>
    <string name="delete_walk">Delete this walk</string>
    <string name="sure_delete_walk">Are you sure you want to delete this walk?</string>
    <string name="error_no_dogs_selected">Please select at least one dog for your walk!</string>
    <string name="refuse">Refuse</string>
    <string name="beginning">Beginning</string>
    <string name="delete_dog">Delete dog</string>
    <string name="sure_delete_dog">Are you sure you want to delete the dog :</string>
    <string name="ok">Ok</string>
    <string name="what_time">At what time?</string>
    <string name="transition_walk" translatable="false">Transition walk</string>
    <string name="addP">All right!</string>
    <string name="participation_added">Your request to participate to this walk has been added correctly.  The creator of this walk has been informed and will tell you soon if he accepts your presence at this walk!</string>
    <string name="participation_already_exists">You have already asked to participate to this walk... Your request has been ignored.</string>
    <string name="careful_modified_walk">This walk has been modified!</string>
    <string name="continue_without_saving">Continue without saving</string>
    <string name="no_walks">You have saved no walks for the moment</string>
    <string name="no_dogs">You have no dogs for the moment</string>
</resources>
