<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".SignUpActivity"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nickname"
            android:id="@+id/Nickname" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/Password" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/Email" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:id="@+id/PhoneNumber" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            tools:context=".SignUpActivity"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/BirthdayMaster"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="date"
                android:text="@string/select_birthdate"
                style="@style/Title.TextView" >
            </TextView>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_birthday"
                android:layout_marginLeft="20dp"
                android:onClick="showDatePickerDialog"
                android:src="@drawable/ic_date_range_black_24dp"/>
        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:id="@+id/Description" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imageviewSignUp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:id="@+id/selectImage"
            android:onClick="takePic"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_picture_from_explorer"
            android:id="@+id/selectPic_SU"
            android:onClick="selectPic"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:id="@+id/Confirm"
            android:onClick="trySignUp"/>

    </LinearLayout>
</ScrollView>