<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100" />

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="100"/>

    <item android:id="@+id/action_dogs"
        android:title="@string/action_dogs"
        android:icon="@drawable/ic_pets_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="100"/>

</menu>