<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".PublicWalkProfileActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:id="@+id/publicwalkProfileTitleTV"
            android:textStyle="bold"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkPublicTitle"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/city"
            android:id="@+id/publicwalkProfileCityTV"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkPublicCity"
            style="@style/Title.TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:id="@+id/publicwalkProfileDescTV"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkPublicDescription"
            style="@style/Title.TextView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/date"
            android:id="@+id/publicwalkProfileDayTV"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkPublicDateDeparture"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/what_time"
            android:id="@+id/publicwalkProfileTimeTV"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            style="@style/Title.TextView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkPublicTimeDeparture"
            style="@style/Title.TextView"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seeProfile"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:id="@+id/viewUserProfile"
            android:layout_marginTop="10dp"
            android:onClick="redirectUserProfile"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/like_to_come"
            android:drawableLeft="@drawable/ic_group_add_black_24dp"
            android:id="@+id/likeToCome"
            android:onClick="sendNotif"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/who_s_participating"
            android:drawableLeft="@drawable/ic_group_black_24dp"
            android:visibility="gone"
            android:id="@+id/participation"
            android:onClick="getParticipants"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pets_black_24dp"
            android:text="@string/walkDogs"
            android:onClick="walkDogs"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_directions_black_24dp"
            android:text="@string/viewPath"
            android:onClick="viewPath"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/useWalk"
            android:drawableLeft="@drawable/ic_directions_run_black_24dp"
            android:id="@+id/useWalkButton"
            android:onClick="useWalk"/>

    </LinearLayout>
</ScrollView>
