<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="shagold.wifwaf.WalkProfileActivity"
        android:focusableInTouchMode="true"
        android:id="@+id/walkProfileLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            style="@style/Title.TextView"
            android:text="@string/title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkTitle"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Title.TextView"
            android:text="@string/city"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Title.TextView"
            android:id="@+id/walkCity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Title.TextView"
            android:text="@string/description"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkDescription"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Title.TextView"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/walkDateDepartureMaster"
            android:text="@string/date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Title.TextView"
            android:id="@+id/walkDateDeparture" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_date"
            android:onClick="showDatePickerDialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            style="@style/Title.TextView"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/walkTimeDepartureMaster"
            android:text="@string/time"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Title.TextView"
            android:id="@+id/walkTimeDeparture"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_time"
            android:onClick="showTimePickerDialog" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:focusableInTouchMode="true"
            android:id="@+id/checkboxDogs">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/Title.TextView"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/walkSelectDogs"
                android:text="@string/dogsWalk"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:focusableInTouchMode="true"
            android:id="@+id/checkboxParticipants">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/Title.TextView"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/walkSelectParticipants"
                android:text="@string/participants"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewPath"
            android:layout_marginTop="10dp"
            android:onClick="viewPathWalk"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_black_24dp"
            android:id="@+id/deleteWalkButton"
            android:onClick="deleteWalk"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/useWalk"
            android:onClick="useWalk"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/applyChangeWalkProfile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="saveChangeWalk"/>

    </LinearLayout>
</ScrollView>