<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".AddWalkActivity"
        android:focusableInTouchMode="true"
        android:id="@+id/addWalkLayout">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:id="@+id/nameWalk" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:id="@+id/descriptionWalk" />

        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title.TextView"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/dateAddWalkMaster"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateAddWalk"
            style="@style/Title.TextView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:onClick="choseDate" />

        <TextView
            android:text="@string/timeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title.TextView"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/timeStampAddWalkMaster"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeStampAddWalk"
            style="@style/Title.TextView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeStamp"
            android:onClick="choseTimeStamp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_prompt_select_dogs"
            android:focusable="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/selectDogs"
            style="@style/Title.TextView"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TraceByWalking"
            android:id="@+id/addWalkWalkingButton"
            android:layout_gravity="center_horizontal"
            android:onClick="walkingWalk"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TraceByDrawing"
            android:id="@+id/addWalkDrawingButton"
            android:layout_gravity="center_horizontal"
            android:onClick="drawingWalk"
            android:layout_marginTop="10dp"/>


    </LinearLayout>
</ScrollView>